# nlp-sample-cases

./: .gitignore  pyproject.toml
notebooks/: 01_semantic_search.ipynb  02_rag_retrieval.ipynb  03_rag_bot.ipynb  04_agent.ipynb  05_lang_graph.ipynb
