[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["pablonoras <pablonoras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.1"
pinecone = "^7.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
